board is here and friendpage creates new game

--- a/public/games.html
+++ b/public/games.html
@@ -33,9 +33,10 @@
         <a class="navbar-brand">Chess App</a>
       </header>
       <ul class="list-group">
-        <a class="list-group-item" href="/">Home</a>
+        <a class="list-group-item" href="/main.html">Home</a>
         <a class="list-group-item" href="/friends.html">Friends</a>
         <a class="list-group-item"href="/games.html" >Games</a>
+        <a class="list-group-item" id="signOutButton">Sign Out</a>
       </ul>
     </div>
     
@@ -43,13 +44,23 @@
     <main class="bmd-layout-content">
       <div id="gamePage" class="container page-container game-page-square">
         
-        <div class="row justify-content-center">
+        <!-- <div class="row justify-content-center">
           <div class="col text-center"><h3>monstertruck12</h3></div>
           <div class="col text-center"><h3>legend27</h3></div>
-        </div>
+        </div> -->
         <div class="row justify-content-center my-row">
+          <div>
+            <div class="col text-center"><h3>monstertruck12</h3></div>
           <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
-          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>    
+          <div>
+            <div class="col text-center"><h3>monstertruck12</h3></div>
+            <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
+          </div>
+
+
+        </div>
+          <!-- <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
+          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>     -->
         </div>
 
         <div class="row justify-content-center my-row">
