--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <!-- Chessboard JS style-->
+  <link rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css" />
+
   <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
   <title>Chess App</title>
 </head>
@@ -16,6 +18,27 @@
 
   <!-- Login Page -->
 
+
+  
+
+  <div id="loginPage" class="container page-container">
+
+    <!-- <div class="form-group">
+      <label for="inputEmail" class="bmd-label-floating">Email address</label>
+      <input type="email" class="form-control" id="inputEmail">
+    </div>
+    <div class="form-group">
+      <label for="inputPassword" class="bmd-label-floating">Password</label>
+      <input type="password" class="form-control" id="inputPassword">
+    </div>  
+
+    <button id="createAccountButton" type="button" class="btn btn-primary btn-outline">Create Account</button>
+    <button id="logInButton" type="button" class="btn btn-primary btn-outline">Log in to Existing account</button> -->
+
+    <div id="firebaseui-auth-container"></div>
+  </div>
+
+ 
 
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
@@ -26,6 +49,7 @@
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
   <!-- Chess board and functionality -->
   <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous"></script>
