--- a/public/main.html
+++ b/public/main.html
@@ -22,7 +22,6 @@
           <span class="sr-only">Toggle drawer</span>
           <i class="material-icons">menu</i>
         </button>
-        <!-- TODO: Center Chess App -->
         <ul class="nav navbar-nav">
           <li class="nav-item"> &nbsp;&nbsp; Chess App</li>
         </ul>
@@ -34,9 +33,11 @@
         <a class="navbar-brand">Chess App</a>
       </header>
       <ul class="list-group">
-        <a class="list-group-item" href="/">Home</a>
+        <a class="list-group-item" href="/main.html">Home</a>
         <a class="list-group-item" href="/friends.html">Friends</a>
-        <a class="list-group-item"href="/games.html" >Games</a>
+        <a class="list-group-item" href="/games.html" >Games</a>
+        <!-- TODO: Fix the coloring in this  -->
+        <a class="list-group-item" id="signOutButton">Sign Out</a>
       </ul>
     </div>
     
