--- a/public/friends.html
+++ b/public/friends.html
@@ -108,7 +108,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-        <button type="button" id="submitAddQuote" data-dismiss="modal" class="btn btn-primary">ADD FRIEND</button>
+        <button type="button" id="submitAddFriend" data-dismiss="modal" class="btn btn-primary">ADD FRIEND</button>
       </div>
     </div>
   </div>
