--- a/public/games.html
+++ b/public/games.html
@@ -40,18 +40,20 @@
       </ul>
     </div>
     
-    <!-- TODO: FIX THE GAME PAGE FOR MOBILE USERS-->
     <main class="bmd-layout-content">
       <div id="gamePage" class="container page-container game-page-square">
         
-        <!-- <div class="row justify-content-center">
-          <div class="col text-center"><h3>monstertruck12</h3></div>
-          <div class="col text-center"><h3>legend27</h3></div>
+
+
+        <!-- <div class="row friend-row">
+          <div class="col text-center" data-friend="${g1.id}"><h3>${g1.whitePlayerUser} vs.${g1.blackPlayerUser} &nbsp; <span class="material-icons">open_in_new</span></h3>
+          <div id="${g1.id}" class="small-board"></div>
+          </div>
         </div> -->
-        <div class="row justify-content-center my-row">
+        <!-- <div class="row justify-content-center my-row">
           <div>
             <div class="col text-center"><h3>monstertruck12</h3></div>
-          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
+            <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
           <div>
             <div class="col text-center"><h3>monstertruck12</h3></div>
             <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
@@ -59,8 +61,8 @@
 
 
         </div>
-          <!-- <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
-          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>     -->
+          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
+          <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>    
         </div>
 
         <div class="row justify-content-center my-row">
@@ -79,12 +81,12 @@
         <div class="row my-row">
           <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
           <div class="col"><img class="mx-auto" src="/images/gameexample.png"></div>
-        </div>
+        </div> -->
 
-        <div class="row my-row">
+        <!-- <div class="row my-row">
           <div class="col">&nbsp;</div>
           <div class="col">&nbsp;</div>
-        </div>
+        </div> -->
 
       </div>
     </main>
