--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,9 @@
   <!-- Login Page -->
 
 
-  
+  <h2>Welcome to Chess with Friends!</h2>
 
   <div id="loginPage" class="container page-container">
-
-    <!-- <div class="form-group">
-      <label for="inputEmail" class="bmd-label-floating">Email address</label>
-      <input type="email" class="form-control" id="inputEmail">
-    </div>
-    <div class="form-group">
-      <label for="inputPassword" class="bmd-label-floating">Password</label>
-      <input type="password" class="form-control" id="inputPassword">
-    </div>  
-
-    <button id="createAccountButton" type="button" class="btn btn-primary btn-outline">Create Account</button>
-    <button id="logInButton" type="button" class="btn btn-primary btn-outline">Log in to Existing account</button> -->
-
     <div id="firebaseui-auth-container"></div>
   </div>
 
