--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
   <!-- Login Page -->
 
 
-  <h2>Welcome to Chess with Friends!</h2>
-
+  <h2 class="welcome">Welcome to Chess with Friends!</h2>
+  <h4 class="welcome">Login or signup below</h4>
   <div id="loginPage" class="container page-container">
     <div id="firebaseui-auth-container"></div>
   </div>
